--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="loading">
-            <div class="logo"><img src='assets/images/icon.png' /></div>
+            <div class="logo"><img src='assets/images/icon.png' width='100%' height='100%'/></div>
             <div class="container">
                 <div class="dot dot-1"></div>
                 <div class="dot dot-2"></div>
