--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                             <div class="card form_holder z-depth-0">
                                 <div class="card-content">
                                     <div class="row">
-                                        <div class="col s12 m5 l4" id='contact_bg'>
+                                        <div class="col s12 m5 l4 i12" id='contact_bg'>
                                             <h4>Let's Talk</h4>
-                                            <p class="black-text">Your success is our success<br> Supercharge your Business Today.</p>
+                                            <p class="black-text i">Your success is our success<br> Supercharge your Business Today.</p>
 
-                                            <table class="grey-text paragraph">
+                                            <table class="grey-text paragraph i">
                                                 <tr>
                                                     <td width='1%'><i class="material-icons">mail_outline</i></td>
                                                     <td>info@deegeelab.com</td>
@@ -186,7 +186,7 @@
                                                 </tr>
                                             </table>
                                         </div>
-                                        <div class="col s12 m7 l8 left-border top-border">
+                                        <div class="col s12 m7 l8 i12 left-border top-border">
                                             <form id="form_query" method="po st" name="form_query">
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_name" name="field_name" type="text"> 
