Updated services and pillars;

--- a/backend.html
+++ b/backend.html
@@ -98,14 +98,13 @@
                                 <h6>Perks of Working with Deegeelab</h6>
                                 <p>Customers rarely observe what happens behind the scene of a business, but the back-end processes play a significant role in ensuring their satisfaction. At Deegeelab, we manage and improve your back-office support processes, so your clients enjoy a smooth experience when they avail your products or services, request replacements, set-up payment option, access your website or send inquiries through your social media channels.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                                <div style="height: 200px;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
            </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
