--- a/frontend.html
+++ b/frontend.html
@@ -118,14 +118,13 @@
                                 <h6>Why Work with Us</h6>
                                 <p>As your partner in growth, we at Deegeelab take the time to handle issues, connect with your customers, and offer valuable insights to help your business grow. We guarantee to make you feel right at home when you decide to let our professionals handle your front-end customer support. For a reasonable price, our friendly specialists will take over your front-office customer support processes.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                                <div style="height: 200px;"></div>
                             </div>
                         </div>                        
                     </div>
                 </div>
            </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
@@ -186,8 +185,10 @@
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
+    <script src="assets/js/scrolloverflow.min.js"></script>
+    <script src="assets/js/jquery.fullPage.js"></script> 
+    <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
     <script src="assets/js/materialize.min.js"></script> 
-    <script src="assets/js/scrolloverflow.min.js"></script> 
     <script >
         let docWidth = $(document).width(), docHeight = $(document).height();
         console.log(docHeight);
