--- a/marketing.html
+++ b/marketing.html
@@ -98,14 +98,13 @@
                                 <h6>Advantages of Working with Us</h6>
                                 <p>We constantly update the strategy to ensure that it is in tune with the latest trends in the market. In addition, we make sure that every content or campaign published matches the taste of your customers and prospects and meets your standards. Every written, graphic or video content that we publish are carefully crafted by our specialists.<br/>Aside from providing quality content that will boost your site’s ranking, part of our digital marketing services includes maintaining the smooth operation of your sites. Our team can create the design, integrate functionalities, check mobile-responsiveness of pages, test the speed, and more. We also will make sure that the website will stay consistent with your company’s branding.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                                <div style="height: 200px;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
            </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
@@ -118,8 +117,8 @@
                     <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
                     <li style="top: 5px;position:  relative;">
                         <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
-                        <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/iglogo.png"></a>
-                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
