--- a/social.html
+++ b/social.html
@@ -16,7 +16,7 @@
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body class="bgpillars">
-        <div class="container row white" style="width: 100% !important; max-width: 100%; overflow: hidden; margin: 0px;">
+        <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
                     <div class="col s12 service-menu">
@@ -110,14 +110,13 @@
                                 <h6>Advantages of Working with Us</h6>
                                 <p>By choosing Deegeelab, you can get expert advice from our professional and experience social media management team. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                                <div style="height: 200px;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
