--- a/webdev.html
+++ b/webdev.html
@@ -90,14 +90,13 @@
                                 <h6>How we do it for you?</h6>
                                 <p>Our website development process involves understanding your expectation and goals. Then, we proceed to crafting the design plan of the website according to the specific that you will provide. Once you approve, we will start programming the site and creating and uploading the written and graphic content. Before public viewing, we will audit and test the site’s functionality.Through the course of the service, we will continuously update and test the website for any glitches. We can also add new elements upon your request.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                                <div style="height: 200px;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
            </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
