--- a/index.html
+++ b/index.html
@@ -87,27 +87,27 @@
                             </g>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='2' cx="-221.8" cy="504.3" r="23.4"/>
-                                <circle class="fill-blue circle-node" data-node='2' cx="-221.8" cy="504.3" r="18" data-link='social.html' data-name='Social Media Management' data-image='img2.jpg' data-desc='Manage and grow your social media accounts (Facebook, Twitter, Instagram, LinkedIn, etc.)'/>
+                                <circle class="fill-blue circle-node" data-node='2' cx="-221.8" cy="504.3" r="18" data-link='social.html' data-name='Social Media Management' data-image='bgsocial.png' data-desc='Manage and grow your social media accounts (Facebook, Twitter, Instagram, LinkedIn, etc.)'/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='1' cx="-267.3" cy="408.8" r="32.5"/>
-                                <circle class="fill-white circle-node" data-node='1' cx="-267.3" cy="408.8" r="25" data-link='marketing.html' data-name='Digital Marketing' data-image='bbg1.jpg' data-desc='Implement SEO, PPC, and other online marketing tactics to establish your online presence. '/>
+                                <circle class="fill-white circle-node" data-node='1' cx="-267.3" cy="408.8" r="25" data-link='marketing.html' data-name='Digital Marketing' data-image='bgmarketing.png' data-desc='Implement SEO, PPC, and other online marketing tactics to establish your online presence. '/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='0' cx="-185.5" cy="262.5" r="26"/>
-                                <circle class="fill-white circle-node" data-node='0' cx="-185.5" cy="262.5" r="20" data-link='lead.html' data-name='Lead Generation' data-image='img3.png' data-desc='Capture and nurture leads using content, social media marketing, SEO and email marketing. '/>
+                                <circle class="fill-white circle-node" data-node='0' cx="-185.5" cy="262.5" r="20" data-link='lead.html' data-name='Lead Generation' data-image='lead.png' data-desc='Capture and nurture leads using content, social media marketing, SEO and email marketing. '/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='3' cx="5.4" cy="289.4" r="34.06"/>
-                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development and Management' data-image='img1.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
+                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development and Management' data-image='webdev.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='4' cx="55.1" cy="389.3" r="24.7"/>
-                                <circle class="fill-white circle-node" data-node='4' cx="55.1" cy="389.3" r="19" data-link='backend.html' data-name='Customer Support Back-End' data-image='bgpillar.jpg' data-desc='Resolve complaints and manage other types of customer concerns on your behalf.'/>
+                                <circle class="fill-white circle-node" data-node='4' cx="55.1" cy="389.3" r="19" data-link='backend.html' data-name='Customer Support Back-End' data-image='bgbackend.png' data-desc='Resolve complaints and manage other types of customer concerns on your behalf.'/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='5' cx="15.2" cy="490.5" r="31.20"/>
-                                <circle class="fill-white circle-node" data-node='5' cx="15.2" cy="490.5" r="24" data-link='frontend.html' data-name='Customer Support Front-End' data-image='bghome.jpg' data-desc='Handle office admin processes such as data entry and managing accounting applications.'/>
+                                <circle class="fill-white circle-node" data-node='5' cx="15.2" cy="490.5" r="24" data-link='frontend.html' data-name='Customer Support Front-End' data-image='frontend.png' data-desc='Handle office admin processes such as data entry and managing accounting applications.'/>
                             </a>
                         </svg>
                     </div>
