Updated fixed ios x;

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta content="RNR Developer Team" name="author">
-        <meta name="">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
         <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
         <link href="assets/images/icon.png" rel="icon">
@@ -48,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
