--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                             <h4>Let's Talk</h4>
                                             <p class="black-text i">Your success is our success<br> Supercharge your Business Today.</p>
 
-                                            <table class="grey-text paragraph i">
+                                            <table class="paragraph i">
                                                 <tr>
                                                     <td width='1%'><i class="material-icons">mail_outline</i></td>
                                                     <td>info@deegeelab.com</td>
@@ -190,35 +190,35 @@
                                             <form id="form_query" method="po st" name="form_query">
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_name" name="field_name" type="text"> 
-                                                    <label for="field_name">Name</label>
+                                                    <label class='left' for="field_name">Name</label>
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_business" name="field_business" type="text"> 
-                                                    <label for="field_business">Business Name</label>
+                                                    <label class='left' for="field_business">Business Name</label>
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_email" name="field_email" type="email"> 
-                                                    <label for="field_email">Email</label>
+                                                    <label class='left' for="field_email">Email</label>
                                                 </div>
                                                 <div class="input-field col s12 m6 l6">
                                                     <input class="validate" id="field_number" name="field_number" type="text"> 
-                                                    <label for="field_number">Contact Number</label>
+                                                    <label class='left' for="field_number">Contact Number</label>
                                                 </div>
                                                 <div class="input-field col s12 m6 l6">
                                                     <input class="validate" id="field_postal" name="field_postal" type="text"> 
-                                                    <label for="field_postal">Postal</label>
+                                                    <label class='left' for="field_postal">Post Code</label>
                                                 </div>
                                                 <div class="input-field col s12 m6 l6">
                                                     <input id='field_date' type='date' id="field_date" name='field_date'>
-                                                    <label for="field_date" class="active">Date</label>
+                                                    <label class='left active' for="field_date" class="active">Date</label>
                                                 </div>
                                                 <div class="input-field col s12 m6 l6">
                                                     <input id='field_time' type='Time' id="field_time" name='field_time'>
-                                                    <label for="field_time" class="active">Time</label>
+                                                    <label class='left active' for="field_time" class="active">Time</label>
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <textarea rows='5' class="validate" id="field_message" name="field_message" type="text"></textarea>
-                                                    <label for="field_message">Message</label>
+                                                    <label class='left' for="field_message">Message</label>
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <button class="right btn-round btn-flat waves-effect waves-light white-text">Send</button>
