--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div id="footer">
+        <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
                     <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
