--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="loading">
+        <div class="loading animated">
             <div class="logo"><img src='assets/images/icon.png' width='100%' height='100%'/></div>
             <div class="container">
                 <div class="dot dot-1"></div>
@@ -125,29 +125,29 @@
                     <div class="layer wrapper" data-depth="0.3">
                         <div class="col s6 m12 l3 end" id="container">
                             <!-- mobile -->
-                            <div class="row" id='display_mobile'>
-                                <div data-count='three' class="panel col s12 m6 l3">
-                                    <div class="text">
-                                        <h5>Customer Support<br>Back End</h5>
-                                        <p><a href="backend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
-                                    </div>
-                                </div>
-                                <div data-count='four' class="panel col s12 m6 l3">
-                                    <div class="text">
-                                        <h5>Customer Support<br>Front End</h5>
-                                        <p><a href="frontend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
-                                    </div>
-                                </div>
-                                <div data-count='one' class="panel col s12 m6 l3">
+                            <div class="row" id='display_pillar'>
+                                <div data-count='one' class="panel">
                                     <div class="text">
                                         <h5>Digital Marketing</h5>
                                         <p><a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
-                                <div data-count='two' class="panel col s12 m6 l3">
+                                <div data-count='two' class="panel">
                                     <div class="text">
                                         <h5>Lead Generation</h5>
                                         <p><a href="lead.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
+                                    </div>
+                                </div>
+                                <div data-count='three' class="panel">
+                                    <div class="text">
+                                        <h5>Customer Support<br>Back End</h5>
+                                        <p><a href="backend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
+                                    </div>
+                                </div>
+                                <div data-count='four' class="panel">
+                                    <div class="text">
+                                        <h5>Customer Support<br>Front End</h5>
+                                        <p><a href="frontend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                             </div>
