--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="determinate"></div>
                         </div>
                     </h4>
-                    <a href="#pillars" class="btn-flat btn-floating grey-text darken-4"><i class="material-icons">mouse</i></a>
+                    <a href="#pillars" class="up-down menu btn-flat btn-floating grey-text darken-4"><i class="mouse"></i></a>
                 </div>
             </div>  
             <div class="section pillar-section"><!-- Pillar -->
