--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="fullpage" class="hide">
             <div class="section main-section">
                 <div class="stage center">
-                    <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left"><i class="material-icons">menu</i></a>
+                    <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left"><i class="nav"></i></a>
                     <ul class="collapsible z-depth-0" data-collapsible="accordion" id='why-deegeelab'>
                         <li>
                             <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
@@ -305,6 +305,6 @@
     <script src="assets/js/system.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script type="text/javascript">
-        $(".menu").sideNav();
+        $(".menu-left").sideNav();
     </script>
 </html>
