--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col s10 m10 l8 offset-s1 offset-m1 offset-l2 enclosed">
                         <div class="row">
-                            <a href="index.html#loaded" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">home</i></a>
+                            <a href="index.html" class="menu btn-flat btn-floating grey-text darken-4 right"><i class="home"></i></a>
                         </div>
                         <div class="divider"></div>
                         <h5 class="bold">Privacy Policy</h5>
