--- a/social.html
+++ b/social.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="home"></i></a>
+                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="home"></i></a>
                                 </li>
                             </ul>
                         </div>
