--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body class="home">
         <div class="loading animated">
             <div class="logo"><img src='assets/images/icon.png' width='100%' height='100%'/></div>
             <div class="container">
